Bug #43878 several warnings "format not a string literal and no format arguments"
Submitted: 26 Mar 2009 9:43 Modified: 14 May 2009 13:26
Reporter: Magnus Blaudd Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:6.2 OS:Any
Assigned to: Magnus Blaudd Target Version:

[26 Mar 2009 9:43] Magnus Blaudd
Description:
There are several warnings like "InitConfigFileParser.cpp:548: warning: format not a string literal and no format arguments" in storage/ndb caused by non constant format identifers.

How to repeat:
.

Suggested fix:
Use a static printf format specifier. For example "%s"
[13 May 2009 10:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/73920
[13 May 2009 10:15] Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:magnus.blaudd@sun.com-20090513101326-rdm2svqcqcxy3b6a) (version source revid:magnus.blaudd@sun.com-20090513101326-rdm2svqcqcxy3b6a) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[13 May 2009 10:20] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/73925
[13 May 2009 10:24] Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:magnus.blaudd@sun.com-20090513102302-wnpafth51g3b1wql) (version source revid:magnus.blaudd@sun.com-20090513102302-wnpafth51g3b1wql) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[13 May 2009 10:30] Magnus Blaudd
Last two patches pushed to 7.0
[14 May 2009 13:26] Jon Stephens
Documented bugfix in the NDB-7.0.6 changelog as follows:

        A number of incorrectly formatted output strings in the source code
        caused compiler warnings.