Bug#43878 several warnings "format not a string literal and no format arguments"   - change 'setClusterLogLevel' and 'get_nodeid' to only print the "reply" in   one place and thus removing the need to "sprintf" a non static string